--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -280,10 +280,11 @@
           <a href="accounts.html" class="nav-link" data-page="accounts.html" data-requires="admin"
             >Accounts</a
           >
-          <button
+            <button
             onclick="logout()"
-            class="nav-link bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 transition duration-300"
+            class="nav-link bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 transition duration-300 flex items-center gap-2"
           >
+            <i class="icon icon-logout icon-white"></i>
             Logout
           </button>
         </nav>
@@ -313,8 +314,9 @@
         >
         <button
           onclick="logout()"
-          class="nav-link bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 transition duration-300"
+          class="nav-link bg-red-600 text-white px-6 py-2 rounded hover:bg-red-700 transition duration-300 flex items-center justify-center gap-2"
         >
+          <i class="icon icon-logout icon-white"></i>
           Logout
         </button>
       </nav>
