--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,7 @@
             background: rgba(255, 255, 255, 0.1);
         }
     </style>
+	
 </head>
 
 <body>
@@ -207,8 +208,14 @@
                 </button>
             </form>
     </main>
+    <script src="auth/security-protection.js"></script>
+    <script src="auth/firebase-config.js"></script>
+    <script src="auth/auth-manager.js"></script>
+	
+    <script src="auth/script-manager.js"></script>
+    <script src="auth/auth-system.js"></script>
 
-    <script src="auth/login-handler.js">
+    <script src="auth/login-handler.js"></script>
 </script>
 </body>
 </html>
