--- a/public/aquila.html
+++ b/public/aquila.html
@@ -288,14 +288,14 @@
         <tbody></tbody>
       </table>
     </main>
-    <footer class="bg-dark text-white mt-8 py-6 shadow-inner">
-      <div class="container mx-auto px-6 flex justify-center">
-        <p class="text-sm text-center">
-          &copy; 2025 Prefect Management System. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <footer class="bg-dark text-white py-6 shadow-inner mt-auto">
+  <div class="container mx-auto px-6 flex justify-center">
+    <p class="text-sm text-center">
+      &copy; <span id="currentYear"></span> Prefect Management System. All rights reserved.
+    </p>
+  </div>
+</footer>
 
-    <script src="/scripts/real-time-updater.js"></script>
+    <script src="scripts/real-time-updater.js"></script>
   </body>
 </html>
