--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -661,11 +661,13 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6 mt-8">
-      <div class="container mx-auto px-4 text-center">
-        <p>&copy; 2025 Enhanced Prefect Management System. All rights reserved.</p>
-      </div>
-    </footer>
+    <footer class="bg-dark text-white py-6 shadow-inner mt-auto">
+  <div class="container mx-auto px-6 flex justify-center">
+    <p class="text-sm text-center">
+      &copy; <span id="currentYear"></span> Prefect Management System. All rights reserved.
+    </p>
+  </div>
+</footer>
     <script src="scripts/dashboard.js"></script>
   </body>
 </html>
