--- a/public/main.html
+++ b/public/main.html
@@ -163,12 +163,12 @@
     </main>
 
     <footer class="bg-dark text-white py-6 shadow-inner mt-auto">
-      <div class="container mx-auto px-6 flex justify-center">
-        <p class="text-sm text-center">
-          &copy; 2025 Prefect Management System. All rights reserved.
-        </p>
-      </div>
-    </footer>
-    <script src="/scripts/real-time-updater.js"></script>
+  <div class="container mx-auto px-6 flex justify-center">
+    <p class="text-sm text-center">
+      &copy; <span id="currentYear"></span> Prefect Management System. All rights reserved.
+    </p>
+  </div>
+</footer>
+    <script src="scripts/real-time-updater.js"></script>
   </body>
 </html>
