--- a/public/accounts.html
+++ b/public/accounts.html
@@ -26,6 +26,7 @@
     <script src="auth/auth-manager.js"></script>
     <script src="auth/script-manager.js"></script>
     <script src="auth/auth-system.js"></script>
+    <script src="auth/api-client.js"></script>
 
     <!-- External CSS -->
     <link rel="stylesheet" href="../styles/custom-icons.css" />
