--- a/public/aquila.html
+++ b/public/aquila.html
@@ -20,6 +20,7 @@
     <script src="auth/auth-manager.js"></script>
     <script src="auth/script-manager.js"></script>
     <script src="auth/auth-system.js"></script>
+    <script src="auth/api-client.js"></script>
     <script src="scripts/navigation-utils.js"></script>
 
     <script src="scripts/logoutbtn.js"></script>
