--- a/public/events.html
+++ b/public/events.html
@@ -18,6 +18,7 @@
     <script src="auth/auth-manager.js"></script>
     <script src="auth/script-manager.js"></script>
     <script src="auth/auth-system.js"></script>
+    <script src="auth/api-client.js"></script>
     <!-- Add this BEFORE your other script tags -->
     <script src="scripts/audit-log-manager.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
