removed Saample accounts for security integrity

--- a/public/accounts.html
+++ b/public/accounts.html
@@ -606,7 +606,7 @@
               </svg>
               <h3 class="mt-2 text-sm font-medium text-gray-900">No users found</h3>
               <p class="mt-1 text-sm text-gray-500">
-                Get started by creating your first user account or loading sample data.
+                Get started by creating your first user account
               </p>
             </div>
           </div>
